# rest_control

./: .gitignore  CMakeLists.txt  README.md  rest_control.pro
cmake/: ccmake.cmake
installer/: common.iss  installer_vs19_x64.iss  version_info.ps1
src/: CMakeLists.txt  HttpRequestWorker.cpp  HttpRequestWorker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/joystick/: qjoystick.cpp  qjoystick.h
src/rc/: CMakeSetupRestControl.rc
